; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lcms2/testbed/extr_testcms2.c_CheckNamedColor.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lcms2/testbed/extr_testcms2.c_CheckNamedColor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cmsMAXCHANNELS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [7 x i8] c"prefix\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"suffix\00", align 1
@.str.2 = private unnamed_addr constant [4 x i8] c"#%d\00", align 1
@.str.3 = private unnamed_addr constant [28 x i8] c"Couldn't append named color\00", align 1
@.str.4 = private unnamed_addr constant [15 x i8] c"Invalid string\00", align 1
@.str.5 = private unnamed_addr constant [12 x i8] c"Invalid PCS\00", align 1
@.str.6 = private unnamed_addr constant [17 x i8] c"Invalid Colorant\00", align 1
@.str.7 = private unnamed_addr constant [13 x i8] c"Invalid Name\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32, i32, i32)* @CheckNamedColor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @CheckNamedColor(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca [255 x i8], align 16
  %17 = alloca [3 x i32], align 4
  %18 = alloca i8*, align 8
  %19 = alloca i64, align 8
  %20 = alloca [255 x i8], align 16
  %21 = alloca [3 x i32], align 4
  %22 = alloca i64, align 8
  %23 = alloca i32, align 4
  store i32 %0, i32* %7, align 4
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  %24 = load i32, i32* @cmsMAXCHANNELS, align 4
  %25 = zext i32 %24 to i64
  %26 = call i8* @llvm.stacksave()
  store i8* %26, i8** %18, align 8
  %27 = alloca i32, i64 %25, align 16
  store i64 %25, i64* %19, align 8
  %28 = load i32, i32* @cmsMAXCHANNELS, align 4
  %29 = zext i32 %28 to i64
  %30 = alloca i32, i64 %29, align 16
  store i64 %29, i64* %22, align 8
  %31 = load i32, i32* %7, align 4
  switch i32 %31, label %174 [
    i32 1, label %32
    i32 2, label %80
  ]

32:                                               ; preds = %5
  %33 = call i32 (...) @DbgThread()
  %34 = call i32* @cmsAllocNamedColorList(i32 %33, i32 0, i32 4, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0))
  store i32* %34, i32** %12, align 8
  %35 = load i32*, i32** %12, align 8
  %36 = icmp eq i32* %35, null
  br i1 %36, label %37, label %38

37:                                               ; preds = %32
  store i32 0, i32* %6, align 4
  store i32 1, i32* %23, align 4
  br label %175

38:                                               ; preds = %32
  store i32 0, i32* %13, align 4
  br label %39

39:                                               ; preds = %67, %38
  %40 = load i32, i32* %13, align 4
  %41 = load i32, i32* %10, align 4
  %42 = icmp slt i32 %40, %41
  br i1 %42, label %43, label %70

43:                                               ; preds = %39
  %44 = load i32, i32* %13, align 4
  %45 = getelementptr inbounds [3 x i32], [3 x i32]* %17, i64 0, i64 2
  store i32 %44, i32* %45, align 4
  %46 = getelementptr inbounds [3 x i32], [3 x i32]* %17, i64 0, i64 1
  store i32 %44, i32* %46, align 4
  %47 = getelementptr inbounds [3 x i32], [3 x i32]* %17, i64 0, i64 0
  store i32 %44, i32* %47, align 4
  %48 = load i32, i32* %10, align 4
  %49 = load i32, i32* %13, align 4
  %50 = sub nsw i32 %48, %49
  %51 = getelementptr inbounds i32, i32* %27, i64 3
  store i32 %50, i32* %51, align 4
  %52 = getelementptr inbounds i32, i32* %27, i64 2
  store i32 %50, i32* %52, align 8
  %53 = getelementptr inbounds i32, i32* %27, i64 1
  store i32 %50, i32* %53, align 4
  %54 = getelementptr inbounds i32, i32* %27, i64 0
  store i32 %50, i32* %54, align 16
  %55 = getelementptr inbounds [255 x i8], [255 x i8]* %16, i64 0, i64 0
  %56 = load i32, i32* %13, align 4
  %57 = call i32 @sprintf(i8* %55, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0), i32 %56)
  %58 = call i32 (...) @DbgThread()
  %59 = load i32*, i32** %12, align 8
  %60 = getelementptr inbounds [255 x i8], [255 x i8]* %16, i64 0, i64 0
  %61 = getelementptr inbounds [3 x i32], [3 x i32]* %17, i64 0, i64 0
  %62 = call i32 @cmsAppendNamedColor(i32 %58, i32* %59, i8* %60, i32* %61, i32* %27)
  %63 = icmp ne i32 %62, 0
  br i1 %63, label %66, label %64

64:                                               ; preds = %43
  %65 = call i32 @Fail(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.3, i64 0, i64 0))
  store i32 0, i32* %6, align 4
  store i32 1, i32* %23, align 4
  br label %175

66:                                               ; preds = %43
  br label %67

67:                                               ; preds = %66
  %68 = load i32, i32* %13, align 4
  %69 = add nsw i32 %68, 1
  store i32 %69, i32* %13, align 4
  br label %39

70:                                               ; preds = %39
  %71 = call i32 (...) @DbgThread()
  %72 = load i32, i32* %8, align 4
  %73 = load i32, i32* %9, align 4
  %74 = load i32*, i32** %12, align 8
  %75 = call i32 @cmsWriteTag(i32 %71, i32 %72, i32 %73, i32* %74)
  store i32 %75, i32* %15, align 4
  %76 = call i32 (...) @DbgThread()
  %77 = load i32*, i32** %12, align 8
  %78 = call i32 @cmsFreeNamedColorList(i32 %76, i32* %77)
  %79 = load i32, i32* %15, align 4
  store i32 %79, i32* %6, align 4
  store i32 1, i32* %23, align 4
  br label %175

80:                                               ; preds = %5
  %81 = call i32 (...) @DbgThread()
  %82 = load i32, i32* %8, align 4
  %83 = load i32, i32* %9, align 4
  %84 = call i64 @cmsReadTag(i32 %81, i32 %82, i32 %83)
  %85 = inttoptr i64 %84 to i32*
  store i32* %85, i32** %12, align 8
  %86 = load i32*, i32** %12, align 8
  %87 = icmp eq i32* %86, null
  br i1 %87, label %88, label %89

88:                                               ; preds = %80
  store i32 0, i32* %6, align 4
  store i32 1, i32* %23, align 4
  br label %175

89:                                               ; preds = %80
  store i32 0, i32* %13, align 4
  br label %90

90:                                               ; preds = %170, %89
  %91 = load i32, i32* %13, align 4
  %92 = load i32, i32* %10, align 4
  %93 = icmp slt i32 %91, %92
  br i1 %93, label %94, label %173

94:                                               ; preds = %90
  %95 = load i32, i32* %13, align 4
  %96 = getelementptr inbounds [3 x i32], [3 x i32]* %21, i64 0, i64 2
  store i32 %95, i32* %96, align 4
  %97 = getelementptr inbounds [3 x i32], [3 x i32]* %21, i64 0, i64 1
  store i32 %95, i32* %97, align 4
  %98 = getelementptr inbounds [3 x i32], [3 x i32]* %21, i64 0, i64 0
  store i32 %95, i32* %98, align 4
  %99 = load i32, i32* %10, align 4
  %100 = load i32, i32* %13, align 4
  %101 = sub nsw i32 %99, %100
  %102 = getelementptr inbounds i32, i32* %30, i64 3
  store i32 %101, i32* %102, align 4
  %103 = getelementptr inbounds i32, i32* %30, i64 2
  store i32 %101, i32* %103, align 8
  %104 = getelementptr inbounds i32, i32* %30, i64 1
  store i32 %101, i32* %104, align 4
  %105 = getelementptr inbounds i32, i32* %30, i64 0
  store i32 %101, i32* %105, align 16
  %106 = getelementptr inbounds [255 x i8], [255 x i8]* %20, i64 0, i64 0
  %107 = load i32, i32* %13, align 4
  %108 = call i32 @sprintf(i8* %106, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0), i32 %107)
  %109 = call i32 (...) @DbgThread()
  %110 = load i32*, i32** %12, align 8
  %111 = load i32, i32* %13, align 4
  %112 = getelementptr inbounds [255 x i8], [255 x i8]* %16, i64 0, i64 0
  %113 = getelementptr inbounds [3 x i32], [3 x i32]* %17, i64 0, i64 0
  %114 = call i32 @cmsNamedColorInfo(i32 %109, i32* %110, i32 %111, i8* %112, i32* null, i32* null, i32* %113, i32* %27)
  %115 = icmp ne i32 %114, 0
  br i1 %115, label %118, label %116

116:                                              ; preds = %94
  %117 = call i32 @Fail(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.4, i64 0, i64 0))
  store i32 0, i32* %6, align 4
  store i32 1, i32* %23, align 4
  br label %175

118:                                              ; preds = %94
  store i32 0, i32* %14, align 4
  br label %119

119:                                              ; preds = %135, %118
  %120 = load i32, i32* %14, align 4
  %121 = icmp slt i32 %120, 3
  br i1 %121, label %122, label %138

122:                                              ; preds = %119
  %123 = load i32, i32* %14, align 4
  %124 = sext i32 %123 to i64
  %125 = getelementptr inbounds [3 x i32], [3 x i32]* %21, i64 0, i64 %124
  %126 = load i32, i32* %125, align 4
  %127 = load i32, i32* %14, align 4
  %128 = sext i32 %127 to i64
  %129 = getelementptr inbounds [3 x i32], [3 x i32]* %17, i64 0, i64 %128
  %130 = load i32, i32* %129, align 4
  %131 = icmp ne i32 %126, %130
  br i1 %131, label %132, label %134

132:                                              ; preds = %122
  %133 = call i32 @Fail(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.5, i64 0, i64 0))
  store i32 0, i32* %6, align 4
  store i32 1, i32* %23, align 4
  br label %175

134:                                              ; preds = %122
  br label %135

135:                                              ; preds = %134
  %136 = load i32, i32* %14, align 4
  %137 = add nsw i32 %136, 1
  store i32 %137, i32* %14, align 4
  br label %119

138:                                              ; preds = %119
  %139 = load i32, i32* %11, align 4
  %140 = icmp ne i32 %139, 0
  br i1 %140, label %141, label %162

141:                                              ; preds = %138
  store i32 0, i32* %14, align 4
  br label %142

142:                                              ; preds = %158, %141
  %143 = load i32, i32* %14, align 4
  %144 = icmp slt i32 %143, 4
  br i1 %144, label %145, label %161

145:                                              ; preds = %142
  %146 = load i32, i32* %14, align 4
  %147 = sext i32 %146 to i64
  %148 = getelementptr inbounds i32, i32* %30, i64 %147
  %149 = load i32, i32* %148, align 4
  %150 = load i32, i32* %14, align 4
  %151 = sext i32 %150 to i64
  %152 = getelementptr inbounds i32, i32* %27, i64 %151
  %153 = load i32, i32* %152, align 4
  %154 = icmp ne i32 %149, %153
  br i1 %154, label %155, label %157

155:                                              ; preds = %145
  %156 = call i32 @Fail(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.6, i64 0, i64 0))
  store i32 0, i32* %6, align 4
  store i32 1, i32* %23, align 4
  br label %175

157:                                              ; preds = %145
  br label %158

158:                                              ; preds = %157
  %159 = load i32, i32* %14, align 4
  %160 = add nsw i32 %159, 1
  store i32 %160, i32* %14, align 4
  br label %142

161:                                              ; preds = %142
  br label %162

162:                                              ; preds = %161, %138
  %163 = getelementptr inbounds [255 x i8], [255 x i8]* %16, i64 0, i64 0
  %164 = getelementptr inbounds [255 x i8], [255 x i8]* %20, i64 0, i64 0
  %165 = call i32 @strcmp(i8* %163, i8* %164)
  %166 = icmp ne i32 %165, 0
  br i1 %166, label %167, label %169

167:                                              ; preds = %162
  %168 = call i32 @Fail(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.7, i64 0, i64 0))
  store i32 0, i32* %6, align 4
  store i32 1, i32* %23, align 4
  br label %175

169:                                              ; preds = %162
  br label %170

170:                                              ; preds = %169
  %171 = load i32, i32* %13, align 4
  %172 = add nsw i32 %171, 1
  store i32 %172, i32* %13, align 4
  br label %90

173:                                              ; preds = %90
  store i32 1, i32* %6, align 4
  store i32 1, i32* %23, align 4
  br label %175

174:                                              ; preds = %5
  store i32 0, i32* %6, align 4
  store i32 1, i32* %23, align 4
  br label %175

175:                                              ; preds = %174, %173, %167, %155, %132, %116, %88, %70, %64, %37
  %176 = load i8*, i8** %18, align 8
  call void @llvm.stackrestore(i8* %176)
  %177 = load i32, i32* %6, align 4
  ret i32 %177
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32* @cmsAllocNamedColorList(i32, i32, i32, i8*, i8*) #2

declare dso_local i32 @DbgThread(...) #2

declare dso_local i32 @sprintf(i8*, i8*, i32) #2

declare dso_local i32 @cmsAppendNamedColor(i32, i32*, i8*, i32*, i32*) #2

declare dso_local i32 @Fail(i8*) #2

declare dso_local i32 @cmsWriteTag(i32, i32, i32, i32*) #2

declare dso_local i32 @cmsFreeNamedColorList(i32, i32*) #2

declare dso_local i64 @cmsReadTag(i32, i32, i32) #2

declare dso_local i32 @cmsNamedColorInfo(i32, i32*, i32, i8*, i32*, i32*, i32*, i32*) #2

declare dso_local i32 @strcmp(i8*, i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
